Wrap site header into a link; make site header fixed

--- a/React/projects/ravenous/src/components/app/App.css
+++ b/React/projects/ravenous/src/components/app/App.css
@@ -35,6 +35,10 @@ input:focus {
 }
 
 h1 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   padding: .66rem 0;
   text-align: center;
   background-color: #cca353;
