--- a/React/projects/ravenous/src/components/search_bar/SearchBar.css
+++ b/React/projects/ravenous/src/components/search_bar/SearchBar.css
@@ -6,6 +6,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   height: 25rem;
+  margin-top: calc(1.8rem + .66rem * 2);
 }
 
 .SearchBar-sort-options ul {
